# npmpink

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
assets_/: install.ab  install.sh  npmpink.excalidraw
assets_/dummy/: package.json
assets_/fixtures_npm_workspaces/: package.json
assets_/fixtures_npm_workspaces/nested/workspace-d/: package.json
assets_/fixtures_npm_workspaces/workspace-a/: package.json
assets_/fixtures_npm_workspaces/workspace-b/: package.json
assets_/fixtures_npm_workspaces/workspace-c/: package.json
npmpink/: Cargo.toml
npmpink-bin/: Cargo.toml
npmpink-bin/src/: cli.rs  config.rs  main.rs  prompts.rs  select_packages.rs
npmpink-core/: Cargo.toml
npmpink-core/src/: config.rs  item_display.rs  item_formatter.rs  iterators.rs  lib.rs  lockfile.rs  package.rs  source.rs  target.rs  utils.rs
npmpink-core/src/ops/: packages.rs
npmpink-core/src/walker/: mod.rs  walk.rs
npmpink-core/src/workspace/: mod.rs  package_json_walker.rs  workspace.rs
npmpink-tui/: Cargo.toml
npmpink-tui/src/: color.rs  header.rs  item.rs  lib.rs  packages.rs  run.rs  shell.rs  sources.rs
npmpink-tui/src/select/: fzf.rs  inquire.rs  mod.rs
npmpink/src/: cli.rs  config.rs  lockfile.rs  main.rs  package.rs  source.rs  workspace.rs
npmpink/src/tui/: gui.rs  header.rs  mod.rs  run.rs
npmpink/src/workspace/: mod.rs  package_json_walker.rs
