[package]
name = "npmpink-bin"
authors = ["Towry Wang <tovvry@gmail.com>"]
version = "0.1.1"
edition = "2021"

[[bin]]
name = "npk"
path = "src/main.rs"

[dependencies]
npmpink-core = { path = "../npmpink-core", version = "0.1.0" }
npmpink-tui = { path = "../npmpink-tui", version = "0.1.0" }

# External
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
inquire = "0.7.5"
lazycell = "1.3.0"
regex = "1.10.5"
home = "0.5.9"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_test = "1.0.176"
thiserror = "1.0.61"
