[package]
name = "npmpink-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
home = "0.5.9"
ignore = "0.4.22"
lazy_static = "1.5.0"
lazycell = "1.3.0"
package_json_schema = { version = "0.2.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_test = "1.0.176"
thiserror = "1.0.61"
wax = "0.6.0"
