[package]
name = "npmpink-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
npmpink-core = { path = "../npmpink-core", version = "0.1.0" }

# External 
crossterm = "0.27.0"
anyhow = "1.0.86"
ratatui = "0.27.0"
lazy_static = "1.5.0"
anstyle = "1.0.8"
inquire = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
