[package]
name = "npmpink"
version = "0.1.0"
edition = "2021"
features = []

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
crossterm = "0.27.0"
home = "0.5.9"
lazy_static = "1.5.0"
package-json = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_test = "1.0.176"
thiserror = "1.0.61"
tui = "0.19.0"
wax = "0.6.0"
